--- a/style.css
+++ b/style.css
@@ -365,7 +365,9 @@ footer {
         margin: auto;
         box-shadow: 0px 0px 2000px 5px rgb(90, 5, 5);
 
-
+  h4{
+     font-size: 30px;
+ }
 
 
     }
